gobmkida/g0/hashtable_partially_clear
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/hashtable_partially_clear/src/engine/cache.c:824:32: error: use of undeclared identifier 'unk_4D6FAA'
routines[10] = ( const char *)&unk_4D6FAA; 
                               ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/hashtable_partially_clear/src/engine/cache.c:825:32: error: use of undeclared identifier 'unk_4D6FAA'
routines[11] = ( const char *)&unk_4D6FAA; 
                               ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/hashtable_partially_clear/src/engine/cache.c:826:32: error: use of undeclared identifier 'unk_4D6FAA'
routines[12] = ( const char *)&unk_4D6FAA; 
                               ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/hashtable_partially_clear/src/engine/cache.c:827:32: error: use of undeclared identifier 'unk_4D6FAA'
routines[13] = ( const char *)&unk_4D6FAA; 
                               ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/hashtable_partially_clear/src/engine/cache.c:828:32: error: use of undeclared identifier 'unk_4D6FAA'
routines[14] = ( const char *)&unk_4D6FAA; 
                               ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/hashtable_partially_clear/src/engine/cache.c:829:32: error: use of undeclared identifier 'unk_4D6FAA'
routines[15] = ( const char *)&unk_4D6FAA; 
                               ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/hashtable_partially_clear/src/obj/1/cache.o] Error 1
